docs/api/qiskit/0.24/qiskit.providers.BaseProvider.mdx
---
title: BaseProvider (v0.24)
description: API reference for qiskit.providers.BaseProvider in qiskit v0.24
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.BaseProvider
---

<span id="qiskit-providers-baseprovider" />

# qiskit.providers.BaseProvider

<Class id="qiskit.providers.BaseProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/providers/baseprovider.py" signature="BaseProvider(*args, **kwargs)" modifiers="class">
  Base class for a Backend Provider.

  ### \_\_init\_\_

  <Function id="qiskit.providers.BaseProvider.__init__" signature="__init__(*args, **kwargs)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                    |                                                             |
  | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.BaseProvider.__init__ "qiskit.providers.BaseProvider.__init__")(\*args, \*\*kwargs) | Initialize self.                                            |
  | [`backends`](#qiskit.providers.BaseProvider.backends "qiskit.providers.BaseProvider.backends")(\[name])            | Return a list of backends matching the specified filtering. |
  | [`get_backend`](#qiskit.providers.BaseProvider.get_backend "qiskit.providers.BaseProvider.get_backend")(\[name])   | Return a single backend matching the specified filtering.   |

  ### backends

  <Function id="qiskit.providers.BaseProvider.backends" signature="backends(name=None, **kwargs)" modifiers="abstract">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")]
  </Function>

  ### get\_backend

  <Function id="qiskit.providers.BaseProvider.get_backend" signature="get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

